fix: dark mode

--- a/src/devtools/panel/style.css
+++ b/src/devtools/panel/style.css
@@ -3,19 +3,23 @@
 @tailwind utilities;
 
 body {
-  @apply dark:bg-gray-900 dark:text-gray-200;
+  @apply text-gray-800 dark:bg-gray-900 dark:text-gray-200;
 }
 
 .request-list {
   @apply flex flex-col border dark:border-gray-500 h-screen;
 }
 
+.solid {
+  @apply border-b bg-gray-100 dark:bg-gray-700 dark:border-gray-500;
+}
+
 .toolbar {
-  @apply border-b bg-gray-100 p-1;
+  @apply p-1;
 }
 
 .icon {
-  @apply w-4 h-4 mr-2 cursor-pointer text-gray-600 hover:text-gray-800;
+  @apply w-4 h-4 mr-2 cursor-pointer text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200;
   fill: currentColor;
 }
 
@@ -30,18 +34,14 @@ body {
       @apply w-full break-all;
     }
   }
-  &.header > * {
-    @apply border-b bg-gray-100;
-  }
   &:not(.header) {
     @apply cursor-pointer;
     &:not(.active):hover {
-      @apply bg-blue-100;
+      @apply bg-blue-100 dark:bg-blue-700;
     }
   }
   &:nth-child(even) {
-    @apply dark:bg-gray-800;
-    background: #fbfbfb;
+    @apply bg-gray-50 dark:bg-gray-800;
   }
   &.active {
     @apply bg-blue-600 text-white;
@@ -49,14 +49,14 @@ body {
 }
 
 .panel {
-  @apply absolute top-0 bottom-0 right-0 w-2/3 bg-white border-l border-gray-300 break-all overflow-y-auto;
+  @apply absolute top-0 bottom-0 right-0 w-2/3 bg-white dark:bg-gray-800 border-l border-gray-300 dark:border-gray-500 break-all overflow-y-auto;
   &-close {
     @apply fixed top-0 right-0 m-1 cursor-pointer z-10;
   }
 }
 
 .section-title {
-  @apply sticky top-0 bg-gray-200 font-bold p-1;
+  @apply sticky top-0 bg-gray-200 dark:bg-gray-600 font-bold p-1;
 }
 .section-body {
   @apply pl-4;
